src/OpenGavel.css
/* ... */
.app-inner {
    width:100%;
    display:flex;
    
    box-sizing: border-box;
    padding:5vw;
}


.app-inner .app-inner-inner {
    width:var(--app-inner-width);
    margin: 0 auto;
}

.app-inner .rollcall .country {
    display:flex;   
}

.rollcall .clc {
    margin:40px 0 0 0;
    border-radius:4px;
    overflow:hidden;
}

.rollcall .clc .country {
    background:var(--app-component);
    display:flex;
    justify-content:flex-end;
    font-weight:bold;
}

.rollcall .clc .country.present {
    background:var(--colour-yellow-light);
}

.rollcall .clc .country.voting {
    background:var(--colour-green-light);
}

.rollcall .clc .internetspace {
    flex-grow:1;
}

.rollcall .clc .country-name {
    padding:20px;
    align-self:flex-start;
    color:var(--app-text);
}

.rollcall .clc .country-present,
.rollcall .clc .country-voting {
    padding:20px;
    cursor:pointer;
    user-select: none;
}

.rollcall .clc .country-present:hover {
    border-radius:4px;
    color:var(--colour-yellow);
}

.rollcall .clc .country-voting:hover {
    border-radius:4px;
    color:var(--colour-green);
}

.rollcall .clc .country-present.present:hover,
.rollcall .clc .country-voting.voting:hover {
    color:var(--colour-red);
}

.rollcall .clc .country:last-child {
    border:none;
}



.one-liner {
    display:flex;
    justify-content: space-between;
    align-items: center;
}

.motions .add-motion {
    padding:10px 15px;
    border-radius:4px;
    display:table;
    cursor:pointer;
    font-weight: bold;
    user-select:none;
    background:var(--colour-green-light);
    color:var(--colour-green);
}

.motions .add-motion:hover {
    background:var(--colour-green);
    color:white;
}

.motions .add-motion.disabled,
.motions .add-motion.disabled:hover {
    background:black;
    color:#777;
    cursor:default;
}

.notification {
    margin:50px 0 40px 0;
    background:var(--colour-orange-light);
    border-style: none none none solid;
    border-width:5px;
    border-color:var(--colour-orange);
    border-radius:4px;
    box-shadow: 0 0 10px rgba(0,0,0,0.01);
    padding:20px;
}

.notification h3 {
    padding:10px 0;
    font-size:1.5rem;
}

.notification p {
    line-height:30px;
}

.notification .action {
    display:flex;
    padding-top:10px;
}

.notification .action .noti-text-link {
    margin-right:20px;
    color:var(--colour-orange);
    font-weight:bold;
    cursor:pointer;
}

.notification .action .noti-text-link:hover {
    color:var(--colour-orange-dark);
}

.motions-grid {
    display:flex;
    flex-direction:column;
    margin-top:35px;
}

.motions-grid .motion-item {
    margin-top:35px;
    
    height:auto;
    animation-name: appear;
    animation-timing-function: cubic-bezier(.04,.53,.38,.97);
    animation-duration: 0.2s;
}
.motions-grid .motion-item.hide,
.notification.hide {
    animation-name: disappear;
    animation-duration: 0.2s;
}

@keyframes appear {
  from {
      height:0;
      opacity:0;
      transform:translateY(-10%);
  }
  to {
      opacity:1;
      transform:translateY(0);
  }
}
@keyframes disappear {
  from {
      opacity:1;
  }
  to {
    height:0;
    margin-top:-1px;
    opacity:0;
  }
}

.motions-grid .motion-item .motion-preview {
    padding:20px;
    background:white;
    font-size:23px;
    font-weight:bold;
    width:100%;
    box-sizing: border-box;
}

.motions-grid .motion-item .motion-edit {
    box-shadow:0 0 10px rgba(0,0,0,0.01);
    border-radius:4px;
    overflow:hidden;
    display:flex;
    width:100%;
}

.motions-grid .motion-item .inputs {
    display:flex;
    box-sizing: border-box;
    padding:20px;
    
    background: hsla(0,0%,100%,.425);
    backdrop-filter: blur(20px);
    box-shadow: 0 0 10px rgb(0 0 0 / 1%);
    flex-grow:1;
}

.motions-grid .motion-item .motion-action {
    background:var(--colour-blue-light);
    color:var(--colour-blue);
    cursor:pointer;
    font-weight:bold;
    width:85px;
    justify-content: center;
    padding:15px;
    display:flex;
    align-items:center;
    user-select: none;
}

.motions-grid .motion-item .motion-action:hover {
    background:var(--colour-blue);
    color:white;
}

.motions-grid .motion-item .input-group {
    margin:0;
    display:flex;
    flex-direction:column;
    margin-right:20px;
}

.motions-grid .motion-item .input-group input {
    width:100%;
}

.motions-grid .motion-item .motion-edit .time-input {
    display:flex;
    width:300px;
}

.motions-grid .motion-item .motion-edit .time-input .input-group {
    width:100%;
}

.motions-grid .motion-item .input-group.motion {
    flex-grow:1;
    margin-right:0;
}

.motions-grid .motion-item .input-group select {
    padding:9px 15px;
    border-radius:4px;
    border:none;
    background:#eee;
    outline:none;
    cursor:pointer;
    font-size:16px;
    margin-top:10px;
}

.motions-grid .motion-item {
    display:flex;
    flex-direction: column;
    align-items:flex-end;
}

.motions-grid .motion-item .subtle-delete {
    font-weight:bold;
    color:#CCC;
    cursor:pointer;
    margin-top:10px;
}

.motions-grid .motion-item .subtle-delete:hover {
    color:#777;
}





.no-caucus {
    margin-top:35px;
}

.caucus .information {
  margin:35px 0;
  display:flex;
  flex-direction:column;
}

.caucus .information-text {
  padding: 20px;
  box-sizing: border-box;
  border-radius:4px 4px 0 0;
  background:white;
}

.caucus h3 {
  color:#777;
  padding-bottom:15px;
}

.caucus .information-text h2 {
  font-size:2rem;
}

.caucus .information-timer {
  height:10px;
  background:#CCC;
  width:100%;
  display:table;
  box-shadow: 0 0 10px rgba(0,0,0,0.01);
  border-radius:0 0 4px 4px;
  overflow:hidden;
}

.elapsed {
  height:10px;
  background:var(--colour-blue);
  transition:1s width linear; /* to make the timer linear hehe */
}

.elapsed.expired {
    background:var(--colour-red);
}

.timer-band {
    background:#ccc;
    margin: 20px 0;
    border-radius:4px;
    overflow:hidden;
}
/* ... */

